--- a/src/pages/App.module.css
+++ b/src/pages/App.module.css
@@ -14,6 +14,8 @@
     font-style: normal;
 }
 body{
+    margin: 20px;
+    padding: 0;
     font-family: 'Outfit', sans-serif;
     background-color: var(--Blue950mainBG);
     height: 100vh;
@@ -28,10 +30,13 @@ body{
     align-items: center;
     justify-content: center;
     background-color: var(--Blue900cardBG);
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     border-radius: 15px;
     padding: 30px;
     box-sizing: border-box;
+    box-shadow: 0 10px 10px 50px hsla(217, 54%, 8%, 10%),
+                0 15px 5px 30px hsla(217, 54%, 5%, 10%);
 }
 .img{
     display: flex;
@@ -69,8 +74,8 @@ body{
     font-size: 1.2rem;
 }
 .flexWrap svg{
-    width: 25px;
-    height: 25px;
+    width: 23px;
+    height: 23px;
 }
 .priceWrap{
     display: flex;
@@ -115,6 +120,49 @@ body{
     display: block;
     border: 2px solid var(--Blue500);
     border-radius: 50%;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+@media (max-width: 600px) {
+    .header {
+        font-size: 1.4rem;
+    }
+
+    .description {
+        font-size: 1rem;
+    }
+
+    .price,
+    .daysLeft,
+    .author {
+        font-size: 1rem;
+    }
+
+    .avatar {
+        height: 30px;
+        width: 30px;
+        padding-right: 10px;
+    }
+
+    .flexWrap svg {
+        width: 18px;
+        height: 18px;
+    }
+
+    .container {
+        padding: 25px;
+    }
+}
+@media (max-width: 400px) {
+    .container {
+        width: 100%;
+        padding: 20px;
+        margin: 0 auto;
+    }
 }
 .hidden{
     display: none;
